<resources>
    <string name="app_name">Soccer Field And Training Plan</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">Soccer Finder</string>
    <string name="hint_name">Give a name to the soccer field</string>
    <string name="hint_addr">Address</string>
    <string name="hint_tel">Tel No.</string>
    <string name="hint_type">Facility Type</string>
    <string name="submit_text">Submit</string>
    <string name="plan_text">Plan</string>
    <string name="delete_item">Delete</string>
    <string name="field_num">Fields</string>
    <string name="plan_num">Plans</string>
</resources>
